--- a/SteamAppBranchSwitcher/Views/MainView.axaml
+++ b/SteamAppBranchSwitcher/Views/MainView.axaml
@@ -12,5 +12,13 @@
     <vm:MainViewModel />
   </Design.DataContext>
 
+  <!--
   <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+  -->
+	<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="10">
+		<TextBlock>Select Branch</TextBlock>
+		<ListBox SelectionMode="Single,AlwaysSelected" Name="listbox"></ListBox>
+		<Button HorizontalAlignment="Center" Click="SwitchBranch">Switch</Button>
+		<TextBlock Name="switch_message" HorizontalAlignment="Center"></TextBlock>
+	</StackPanel>
 </UserControl>
