--- a/SteamAppBranchSwitcher/Views/MainView.axaml
+++ b/SteamAppBranchSwitcher/Views/MainView.axaml
@@ -5,6 +5,7 @@
              xmlns:vm="clr-namespace:SteamAppBranchSwitcher.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SteamAppBranchSwitcher.Views.MainView"
+             x:CompileBindings="True"
              x:DataType="vm:MainViewModel">
   <Design.DataContext>
     <!-- This only sets the DataContext for the previewer in an IDE,
