--- a/SteamAppBranchSwitcher/Views/MainWindow.axaml
+++ b/SteamAppBranchSwitcher/Views/MainWindow.axaml
@@ -6,6 +6,7 @@
         xmlns:views="clr-namespace:SteamAppBranchSwitcher.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="SteamAppBranchSwitcher.Views.MainWindow"
+        x:CompileBindings="True"
         Icon="/Assets/avalonia-logo.ico"
         Title="SteamAppBranchSwitcher">
         <views:MainView />
